# flappy-bird-bevy

./: Cargo.toml  README.md
src/: bird.rs  camera.rs  collisions.rs  game_state.rs  main.rs  physics.rs  pipes.rs  score.rs  sounds.rs  world.rs
