[package]
name = "bevy-first-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.6", features = [] }
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls.git" }
bevy_kira_audio = { version = "0.8", features = ["mp3"] }
bevy_easings = "0.5"
# bevy_rapier2d = { version = "0.12", features = ["simd-stable", "render"] }
heron = { version = "1.1.0", features = ["2d"] }
rand = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
