[package]
name = "bevy-first-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.6" }
bevy_kira_audio = { version = "0.8", features = ["mp3"] }
bevy_easings = "0.5"
heron = { version = "1.1.0", features = ["2d"] }
rand = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
